# src/routes/UserRouter.ts
@@ -2,6 +2,10 @@ import express, { Request, Response } from "express";
 import { UserController } from "../controller/UsersController";
 import { LogInfo } from "../utils/logger";
 
+//BCRYTP for passwords
+import bcrypt from 'bcrypt';
+import { IUser } from "../domain/interfaces/IUser.interface";
+
 // Router from express
 let usersRouter = express.Router();
 
@@ -16,7 +20,7 @@ usersRouter.route('/')
         //Obtain Response
         const response: any = await controller.getUsers(id);
         //Send to the client teh response
-        return res.send(response);
+        return res.status(200).send(response);
     })
     //  DELETE: 
     .delete(async (req: Request, res: Response) => {
@@ -28,7 +32,7 @@ usersRouter.route('/')
         //Obtain Response
         const response: any = await controller.deleteUser(id);
         //Send to the client teh response
-        return res.send(response);
+        return res.status(200).send(response);
     })
     // CREATE
     .post(async (req: Request, res: Response) => {
@@ -37,6 +41,10 @@ usersRouter.route('/')
         let email: any = req?.query?.email;
         let age: any = req?.query?.age;
 
+        // let name2: any = req?.body?.name;
+        // let email2: any = req?.body?.email;
+        // let age2: any = req?.body?.age;
+        // LogInfo(`Body params:  ${name2}, ${email2}, ${age2}`)
 
         let user = {
             name: name || 'Default',
@@ -49,7 +57,7 @@ usersRouter.route('/')
         //Obtain Response
         const response: any = await controller.createUser(user);
         //Send to the client teh response
-        return res.send(response);
+        return res.status(201).send(response);
     })
     // Put
     .put(async (req: Request, res: Response) => {
@@ -72,8 +80,14 @@ usersRouter.route('/')
         //Obtain Response
         const response: any = await controller.updateUser(user, id);
         //Send to the client teh response
-        return res.send(response);
+        return res.status(200).send(response);
     })
 
-
 export default usersRouter;
+
+/**
+ * Get Documents => 200
+ * Creation Documents => 201 ok
+ * Deletion of document => 200 (entity) / 204 (No return)
+ * Update of document => 200 (entity) / 204 (No return)
+ */
